// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRecord EnrollmentFundng ChangeFunding matches snapshot - change funding 1`] = `
<DocumentFragment>
  <div
    class="oec-card"
  >
    <div
      class="oec-card-cell"
    >
      <h3>
        Change funding
      </h3>
      <form
        class="usa-form usa-form"
        id="change-funding-form"
      >
        <fieldset
          aria-labelledby="fieldset-legend-funding-source-1"
          class="usa-fieldset"
          id="funding-source-1"
        >
          <legend
            id="fieldset-legend-funding-source-1"
          >
            <span
              class="usa-label"
            >
              Funding source options
            </span>
          </legend>
          <div />
        </fieldset>
        <div
          class="usa-form-group"
        >
          <label
            class="usa-label"
            for="last-reporting-period"
          >
            Last reporting period for current CDC - Child Day Care - undefined funding
          </label>
          <span
            class="usa-hint text-italic"
          >
            Last reporting period is only required if this child's funding is no longer active.
          </span>
          <select
            aria-required="false"
            class="usa-select"
            id="last-reporting-period"
            name="last-reporting-period"
          >
            <option
              value=""
            >
              - Select -
            </option>
          </select>
        </div>
        <div
          class="display-flex flex-align-center"
        >
          <button
            class="usa-button usa-button--outline bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <div
            class="margin-top-1"
          >
            <button
              class="usa-button bx--btn bx--btn--primary"
              tabindex="0"
              type="submit"
            >
              Change current funding
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class=""
    />
  </div>
  <div
    class="oec-card"
  >
    <div
      class="oec-card-cell"
    >
      <div
        class="display-flex flex-column flex-align-end"
      >
        <div>
          <button
            class="usa-button usa-button--unstyled margin-right-4 bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            End current funding
          </button>
          <button
            class="usa-button usa-button--unstyled bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Change funding
          </button>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`EditRecord EnrollmentFundng ChangeFunding matches snapshot - end funding 1`] = `
<DocumentFragment>
  <div
    class="oec-card"
  >
    <div
      class="oec-card-cell"
    >
      <h3>
        End current funding
      </h3>
      <form
        class="usa-form usa-form"
        id="change-funding-form"
      >
        <div
          class="usa-form-group"
        >
          <label
            class="usa-label"
            for="last-reporting-period"
          >
            Last reporting period for current CDC - Child Day Care - undefined funding
          </label>
          <span
            class="usa-hint text-italic"
          >
            Last reporting period is only required if this child's funding is no longer active.
          </span>
          <select
            aria-required="true"
            class="usa-select"
            id="last-reporting-period"
            name="last-reporting-period"
          >
            <option
              value=""
            >
              - Select -
            </option>
          </select>
        </div>
        <div
          class="display-flex flex-align-center"
        >
          <button
            class="usa-button usa-button--outline bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <div
            class="margin-top-1"
          >
            <button
              class="usa-button bx--btn bx--btn--primary"
              tabindex="0"
              type="submit"
            >
              End current funding
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class=""
    />
  </div>
  <div
    class="oec-card"
  >
    <div
      class="oec-card-cell"
    >
      <div
        class="display-flex flex-column flex-align-end"
      >
        <div>
          <button
            class="usa-button usa-button--unstyled margin-right-4 bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            End current funding
          </button>
          <button
            class="usa-button usa-button--unstyled bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Change funding
          </button>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`EditRecord EnrollmentFundng ChangeFunding matches snapshot - without funding 1`] = `
<DocumentFragment>
  <div
    class="oec-card"
  >
    <div
      class="oec-card-cell"
    >
      <h3>
        Change funding
      </h3>
      <form
        class="usa-form usa-form"
        id="change-funding-form"
      >
        <fieldset
          aria-labelledby="fieldset-legend-funding-source-1"
          class="usa-fieldset"
          id="funding-source-1"
        >
          <legend
            id="fieldset-legend-funding-source-1"
          >
            <span
              class="usa-label"
            >
              Funding source options
            </span>
          </legend>
          <div />
        </fieldset>
        <div
          class="display-flex flex-align-center"
        >
          <button
            class="usa-button usa-button--outline bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <div
            class="margin-top-1"
          >
            <button
              class="usa-button bx--btn bx--btn--primary"
              tabindex="0"
              type="submit"
            >
              Change current funding
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class=""
    />
  </div>
  <div
    class="oec-card"
  >
    <div
      class="oec-card-cell"
    >
      <div
        class="display-flex flex-column flex-align-end"
      >
        <div>
          <button
            class="usa-button usa-button--unstyled bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Start new funding
          </button>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;
